@@ -6,6 +6,8 @@ public class CTokenRule extends HashMap<String, Object> {
 	private static final long serialVersionUID = 1139476411716798082L;
 
 	public CTokenRule() {
-//		put("int",		new Integer(CToken.TK_INT));
+		// put("int", new Integer(CToken.TK_INT));
+		put("true", Integer.valueOf(CToken.TK_TRUE));
+		put("false", Integer.valueOf(CToken.TK_FALSE));
 	}
 }
